--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hideokamoto",
   "license": "MIT",
   "dependencies": {
-    "alexa-sdk": "^1.0.8"
+    "alexa-sdk": "^1.0.8",
+    "ical": "^0.5.0"
   }
 }
